--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
+    "node-process": "^1.0.1",
+    "process": "^0.11.10",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drop-shadow": "0.0.6",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
+    "react-native-rename": "^3.2.11",
     "react-native-view-shot": "3.4.0"
   },
   "devDependencies": {
